# Nota

./: Cargo.toml  README.md  data
src/: NoteM.rs  data.txt  main.rs  notes.rs  user.rs  users.txt
src/app/: mod.rs  note_m.rs
src/notes/: note.rs
