[package]
name = "nota"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono ={ version = "0.4.26", features = ["serde"]}
pwhash = "1.0.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
termsize = "0.1.6"
